fix double scroll + fix hardcoded localhost

--- a/angular/style.css
+++ b/angular/style.css
@@ -1,3 +1,7 @@
+body{
+    overflow: hidden;
+}
+
 .menuButton {
     background-color: transparent;
     border: none;
@@ -25,7 +29,7 @@ md-sidenav {
     display: block;
     max-width: 98rem;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;    
 }
 
 .navButtonGroup{
